@@ -172,6 +172,7 @@
 |<<content.javascript.clipboard,content.javascript.clipboard>>|Allow JavaScript to read from or write to the clipboard.
 |<<content.javascript.enabled,content.javascript.enabled>>|Enable JavaScript.
 |<<content.javascript.log,content.javascript.log>>|Log levels to use for JavaScript console logging messages.
+|<<content.javascript.log_message,content.javascript.log_message>>|Javascript message sources/levels to show in the qutebrowser UI.
 |<<content.javascript.modal_dialog,content.javascript.modal_dialog>>|Use the standard JavaScript modal dialog for `alert()` and `confirm()`.
 |<<content.javascript.prompt,content.javascript.prompt>>|Show javascript prompts.
 |<<content.local_content_can_access_file_urls,content.local_content_can_access_file_urls>>|Allow locally loaded documents to access other local URLs.
@@ -2399,6 +2400,23 @@ Default:
 - +pass:[info]+: +pass:[debug]+
 - +pass:[unknown]+: +pass:[debug]+
 - +pass:[warning]+: +pass:[debug]+
+
+[[content.javascript.log_message]]
+=== content.javascript.log_message
+Javascript message sources/levels to show in the qutebrowser UI.
+When a JavaScript message is logged from a location matching the glob pattern given in the key, and is from one of the levels listed as value, it's surfaced as a message in the qutebrowser UI.
+By default, errors happening in qutebrowser internally or in userscripts are shown to the user.
+
+Type: <<types,Dict>>
+
+Default: 
+
+- +pass:[qute:*]+:
+
+* +pass:[error]+
+- +pass:[userscript:*]+:
+
+* +pass:[error]+
 
 [[content.javascript.modal_dialog]]
 === content.javascript.modal_dialog
