@@ -29,6 +29,9 @@ Added
   prompts (bound to `<Alt+e>` by default).
 - New `clock` value for `statusbar.widgets`, displaying the current time.
 - New `qute://start` built-in start page (not set as the default start page yet).
+- New `content.javascript.log_message` setting, allowing to surface JS log
+  messages as qutebrowser messages (rather than only logging them). By default,
+  errors in internal `qute:` pages and userscripts are shown to the user.
 - New `qute-1pass` userscript using the 1password commandline to fill
   passwords.
 - New features in userscripts:
@@ -87,6 +90,8 @@ Changed
 - Improved output when loading Greasemonkey scripts.
 - The macOS `.app` now is registered as a handler for `.mhtml` files, such as
   the ones produced by `:download --mhtml`.
+- The "... called unimplemented GM_..." messages are now logged as info JS
+  messages instead of errors.
 
 Fixed
 ~~~~~
